# pymapdl-reader

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  ignore_words.txt  index.html  pyproject.toml  requirements.txt  requirements_build.txt  requirements_docs.txt  requirements_test.txt  robots.txt  setup.py  sitemap.xml  versions.json
.ci/: azure-pipelines.yml  azure-publish-dist.yml  build_documentation.yml  build_wheels.sh  install_package.yml  macos-install-python.sh
.github/: dependabot.yml  stale.yml
.github/workflows/: archive.cdb  automerge_prs.yml  ci-build.yml  ci.yml  ci_cd.yml  dependabot_automerge.yml  doc-build.yml  mac-build.yml  style.yml  testing-and-deployment.yml
ansys/mapdl/reader/: __init__.py  _mp_keys.py  _rst_keys.py  _version.py  archive.py  cell_quality.py  common.py  cyclic_reader.py  dis_result.py  elements.py  emat.py  errors.py  full.py  mesh.py  misc.py  plotting.py  rst.py  rst_avail.py
doc/: Makefile
doc/source/: conf.py  contributing.rst  getting_started.rst  index.rst
doc/source/api/: cyclic_result.rst  mesh_quality.rst  rst.rst
doc/source/user_guide/: archive.rst  loading_emat.rst  loading_km.rst  loading_results.rst  quality.rst
docs/source/: archive.rst  conf.py  examples.rst  getting_started.rst  index.rst
docs/source/api/: archive.rst  index.rst
docs/source/user_guide/: archive.rst  loading_emat.rst  loading_km.rst  loading_results.rst  quality.rst
examples/: README.txt  try_example.py
examples/00-read_binary/: custom_visualization.py  load_corner_result.py  load_shaft_result.py  load_thermal_result.py  pontoon.py
examples/01-cyclic_results/: academic_sector_nd.py  academic_sector_stress_strain.py  sector_model.py
requirements/: requirements_doc.txt  requirements_docs.txt  requirements_test.txt
tests/: conftest.py  test_beam44.py  test_binary_reader.py  test_binary_reader_cython.py  test_cyclic.py  test_dist_rst.py  test_emat.py  test_examples.py  test_full.py  test_rst.py  text_examples.py  unused_test_examples.py  unused_test_shell281.py
tests/__pycache__/: test_binary_reader.cpython-312-pytest-8.3.2.pyc.14328  test_binary_reader_cython.cpython-312-pytest-8.3.2.pyc.32176  test_cyclic.cpython-312-pytest-8.3.2.pyc.15660  test_cyclic.cpython-312-pytest-8.3.2.pyc.32472
tests/archive/: test_archive.py
tests/archive/test_data/: ErnoRadiation.cdb
tests/elements/: test_solid239_240.py
tests/elements/plane_182_183/: test_archive_182_183.py  test_plane182_183.py
tests/elements/shell181/: test_shell181.py  test_shell181_element_coord.py
tests/elements/shell281/: MAPDL.inp  test_shell281.py
tests/elements/solid186/: test_solid186.py
tests/elements/targe170/: file.rst  test_targe170.py
tests/testfiles/: nodal_reaction.npy  shell181_2020R2.rst  shell181_2021R1.rst  temp_dependent_results.rth
tests/testfiles/materials/: file.rst  stress_lim.rst
tests/testfiles/para/: para0.txt  para1.txt  para2.txt
version/: index.html
version/0.52/: .buildinfo  404.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
version/0.52/_sources/: contributing.rst.txt  getting_started.rst.txt  index.rst.txt
version/0.52/_static/: documentation_options.js
version/0.52/api/: announcement.html  archive.html  cyclic_result.html  emat.html  full.html  index.html  mesh_quality.html  misc.html  rst.html
version/0.52/examples/: index.html
version/0.52/user_guide/: archive.html  index.html  loading_emat.html  loading_km.html  loading_results.html  quality.html
version/0.53/: .buildinfo  404.html  announcement.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
version/0.53/_static/: documentation_options.js
version/0.53/api/: archive.html  cyclic_result.html  emat.html  full.html  index.html  misc.html  (+1 more)
version/0.54/: 404.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.55/: contributing.html  genindex.html  getting_started.html  index.html  objects.inv  searchindex.js
version/0.56/: genindex.html  getting_started.html  index.html  objects.inv  search.html
version/dev/: .buildinfo  404.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/stable/: 404.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
(+346 files in other folders)
